@@ -1,5 +1,6 @@
 2.6.9
  - Removed old 1.x API (that means all identifiers with capital letters!)
+ - Tested with all current libpq versions and oldest/newest supported backends
  - No longer have old OnCommit()/OnAbort()/OnDoubt() callbacks in transactor!
  - Fixes failure when closing cursors with upper-case letters in their names
  - Fixes bug when adding triggers to connections that aren't open yet
@@ -19,6 +20,7 @@
  - Some new small utility classes for disabling notice processing etc.
  - Result sets remember the queries that yielded them
  - New test script, pqxx-fulltest, tests against all current postgres versions
+ - Connections can simulate failure
 2.6.8
  - Fixes bug: binary parameters to prepared statements truncated at nul bytes
  - New, more specific exception types to distinguish errors from server
